--- a/views/busca/endereco.ejs
+++ b/views/busca/endereco.ejs
@@ -4,21 +4,21 @@
             <div class="grid_7 busca">
                 <h2>Confirme seu endereço e escolha o serviço que procura!</h2>
                 <form method="post" action="/busca/index">
-                    <input type="hidden" name="bairro" value="<%= correio.bairro %>" />
+                    <input type="hidden" name="bairro" value="<%= endereco.bairro %>" />
                     <div class="row gutters">
                         <div class="col grid_10">
-                            <input type="text" name="endereco" value="<%= correio.tipo_logradouro + ' ' + correio.logradouro %>" placeholder="Endereço" class="check" />
+                            <input type="text" name="endereco" value="<%= endereco.logradouro %>" placeholder="Endereço" class="check" />
                         </div>
                         <div class="col grid_2">
-                            <input type="text" name="numero" value="" placeholder="Número" />
+                            <input type="text" name="numero" value="" placeholder="Nº" />
                         </div>
                     </div>
                     <div class="row gutters">
                         <div class="col grid_2">
-                            <input type="text" name="uf" value="<%= correio.uf %>" placeholder="UF" class="check" />
+                            <input type="text" name="uf" value="<%= endereco.uf %>" placeholder="UF" class="check" />
                         </div>
                         <div class="col grid_5">
-                            <input type="text" name="cidade" value="<%= correio.cidade %>" placeholder="Cidade" class="check" />
+                            <input type="text" name="cidade" value="<%= endereco.localidade %>" placeholder="Cidade" class="check" />
                         </div>
                         <div class="col grid_5">
                             <select name="tipo" title="Serviço">
