Iniciando busca utilizando API de buscas do Apiary

--- a/views/busca/endereco.ejs
+++ b/views/busca/endereco.ejs
@@ -23,9 +23,9 @@
                         <div class="col grid_5">
                             <select name="tipo" title="Serviço">
                                 <optgroup>
-                                    <option value="PET">Petshops</option>
-                                    <option value="VET">Veterinárias</option>
-                                    <option value="PETVET">Todos</option>
+                                    <option value="pet">Petshops</option>
+                                    <option value="vet">Veterinárias</option>
+                                    <option value="petvet">Todos</option>
                                 </optgroup>
                             </select>
                         </div>
@@ -42,7 +42,6 @@
             </div>
             <div class="grid_7 app">
                 <div class="row gutters">
-                    <div class="col grid_4"><a href="#" class="animated"><img src="/images/apple.png" width="30" height="30" alt=""/><div><span>Disponível para</span> Iphone</div></a></div>
                     <div class="col grid_4"><a href="#" class="animated"><img src="/images/android.png" width="30" height="30" alt=""/><div><span>Disponível para</span> Android</div> </a></div>
                     <div class="col grid_4"><a href="#" class="win animated"><img src="/images/windows.png" width="30" height="30" alt=""/><div><span>Disponível para</span> Windows Phone</div></a></div>
                 </div>
