--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,7 +42,9 @@
   <header>
     <div class="container_12">
       <div class="row gutters">
-        <div class="col grid_3 logo"><img src="/images/logo.png" width="140" height="45"></div>
+        <div class="col grid_3 logo">
+          <a href="/"><img src="/images/logo.png" width="140" height="45"></a>
+        </div>
         <div class="col grid_9 menu">
           <nav> 
             <!--a href="#">Sobre o Ipet</a> 
