Finalizando busca de pets por geolocalização.

--- a/views/busca/endereco.ejs
+++ b/views/busca/endereco.ejs
@@ -15,7 +15,7 @@
                     </div>
                     <div class="row gutters">
                         <div class="col grid_2">
-                            <input type="text" name="uf" value="<%= endereco.uf %>" placeholder="UF" class="check" />
+                            <input type="text" name="uf" value="<%= endereco.uf %>" maxlength="2" placeholder="UF" class="check" />
                         </div>
                         <div class="col grid_5">
                             <input type="text" name="cidade" value="<%= endereco.localidade %>" placeholder="Cidade" class="check" />
