--- a/views/busca/index.ejs
+++ b/views/busca/index.ejs
@@ -2,23 +2,7 @@
     <div class="container_12">
         <div class="row result">
             <div class=" grid_12">
-                <div class="row">
-                    <h2>Encontrado <span>(0)</span> resultados</h2>
-                    <div class="row lista">
-                        <div class="col grid_12 pets">
-                            <div class="row gutters">
-                                <div class="logo-pet col grid_3">
-                                    <img src="/images/logo-pet.png" width="230" height="107">
-                                </div>
-                                <div class="col grid_6">
-                                    <h3>Pet</h3>
-                                    <div class="avaliacao open">Distância: 2.2 Km</div>
-                                </div>
-                                <a href="#" class="entrar col grid_3"><span>+</span> Detalhes</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div data-action="<%= acao %>" data-type="<%= tipo %>" data-lat="<%= lat %>" data-lng="<%= lng %>" id="resultados" class="row"></div>
             </div>
             <a href="#" class="pagination animated">Mais resultados</a>
         </div>
