--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -111,6 +111,8 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/jquery-2.1.3.min.js"></script>
+    <script src="/js/common.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
