--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -5,15 +5,15 @@
                 <h2>Encontre pets e veterinárias mais rápido e próximo a você!</h2>
                 <form method="post" action="/busca/endereco" class="row gutters">
                     <div class="col grid_6">
-                        <input type="text" name="cep" placeholder="Digite seu CEP" />
+                        <input type="text" name="cep" maxlength="8" placeholder="Digite seu CEP" />
                     </div>
                     <div class="col grid_6">
                         <button type="submit">Buscar</button>
                     </div>
                 </form>
                 <div class="row gutters">
-                    <p class="col grid_6">Não sabe seu CEP? <a href="#">Clique aqui</a></p> 
-                    <p class="col grid_6"><img src="/images/gps.png" width="18" height="18" border="0" alt="" /> <a href="#"> Localize-me</a></p>
+                    <p class="col grid_6">Não sabe seu CEP? <a href="/busca/endereco">Clique aqui</a></p> 
+                    <p class="col grid_6"><img src="/images/gps.png" width="18" height="18" border="0" alt="" /> <a href="/busca"> Localize-me</a></p>
                 </div>
             </div> 
             <div class="grid_7 app">
