--- a/views/search/maps.ejs
+++ b/views/search/maps.ejs
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Maps</title>
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-    <script>
-      function initialize() {
-        var style = [{"stylers":[{"hue":"#ff1a00"},{"invert_lightness":true},{"saturation":-100},{"lightness":33},{"gamma":0.5}]},{"featureType":"water","elementType":"geometry","stylers":[{"color":"#2D333C"}]}];
+    <head>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+        <meta charset="utf-8">
+        <title>Maps</title>
+        <style>
+            html, body, #map-canvas {
+                height: 100%;
+                margin: 0px;
+                padding: 0px
+            }
+        </style>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+        <script>
+            function initialize() {
+                var style = [{"stylers": [{"hue": "#ff1a00"}, {"invert_lightness": true}, {"saturation": -100}, {"lightness": 33}, {"gamma": 0.5}]}, {"featureType": "water", "elementType": "geometry", "stylers": [{"color": "#2D333C"}]}];
 
-        var myLatlng = new google.maps.LatLng(-22.8635555, -43.4464647);
-        var mapOptions = {
-          zoom: 11,
-          center: myLatlng,
-           mapTypeId: "custom_style"
-        };
+                var myLatlng = new google.maps.LatLng(-22.8635555, -43.4464647);
+                var mapOptions = {
+                    zoom: 11,
+                    center: myLatlng,
+                    mapTypeId: "custom_style"
+                };
 
-        var styledMapOptions = {
-          name: 'Custom Style'
-        };
-        var customMapType = new google.maps.StyledMapType(style, styledMapOptions);
-        
-        var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-        map.mapTypes.set("custom_style", customMapType);
+                var styledMapOptions = {
+                    name: 'Custom Style'
+                };
+                var customMapType = new google.maps.StyledMapType(style, styledMapOptions);
+
+                var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+                map.mapTypes.set("custom_style", customMapType);
 
 
-        var marker;
-        <% for(var i=0; i < data.length; i++) {%>
-           marker = new google.maps.Marker({
-            position: new google.maps.LatLng(<%= data[i].loc[1] %>, <%= data[i].loc[0] %>),
-            map: map,
-            title: 'Hello World!',
-            icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
-          });
-        <% } %>        
-      }
+                var marker;
+                < % for (var i = 0; i < data.length;
+                i++
+                ) { % >
+                marker = new google.maps.Marker({
+                position: new google.maps.LatLng( < %= data[i].loc[1] % > , < %= data[i].loc[0] % > ),
+                        map: map,
+                        title: 'Hello World!',
+                        icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+                });
+                < % } % >
+            }
 
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  </head>
-  <body>
-    <div id="map-canvas"></div>
-  </body>
+            google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+    </head>
+    <body>
+        <div id="map-canvas"></div>
+    </body>
 </html>
