Finalizando detalhamento dos clientes.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -110,6 +110,7 @@
     -->
 
     <!--SCRIPTS-->
+    <%- block('localScripts', '<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>') %>
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery-2.1.3.min.js"></script>
     <script src="/js/common.js"></script>
