--- a/views/busca/detalhe.ejs
+++ b/views/busca/detalhe.ejs
@@ -5,10 +5,7 @@
                 <div class="grid_12 pets">
                     <div id="detalhes" data-id="<%= id %>" data-lat="<%= lat %>" data-lng="<%= lng %>" class="row gutters"></div>
                     <br />
-                    <div class="map">
-                        <h2>Como chegar</h2>
-                        <div id="map"></div>
-                    </div>
+                    <div id="map" class="map"></div>
                 </div>
             </div>
         </div>
