--- a/views/busca/detalhe.ejs
+++ b/views/busca/detalhe.ejs
@@ -5,7 +5,10 @@
                 <div class="grid_12 pets">
                     <div id="detalhes" data-id="<%= id %>" data-lat="<%= lat %>" data-lng="<%= lng %>" class="row gutters"></div>
                     <br />
-                    <div id="map" class="map"></div>
+                    <div class="map">
+                        <h2>Como chegar</h2>
+                        <div id="map" style="height: 500px; width: 500px; position: relative; display: block;"></div>
+                    </div>
                 </div>
             </div>
         </div>
