Finalizando detalhamento dos clientes.

--- a/views/busca/detalhe.ejs
+++ b/views/busca/detalhe.ejs
@@ -7,7 +7,7 @@
                     <br />
                     <div class="map">
                         <h2>Como chegar</h2>
-                        <div id="map" style="height: 500px; width: 500px; position: relative; display: block;"></div>
+                        <div id="map" style="height: 300px; width: 100%; position: relative; display: block;"></div>
                     </div>
                 </div>
             </div>
