Configurando ambiente de produção.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,7 +50,7 @@
             <!--a href="#">Sobre o Ipet</a> 
             <a href="#">Para Petshops</a> 
             <a href="#">Contato</a--> 
-            <a href="#" class="bt">Contato</a> 
+            <a href="mailto:comercial@shoppets.com.br" target="_blank" class="bt">Contato</a>
           </nav>
         </div>
       </div>
