--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="keywords" content="petshops, petshop, pet shop, pet shops, veterinarios, busca, buscas, veterinario, veterinário, veterinários, compra, compras, pedido, pedidos, entrega, entregas, próximo, próximos, proximo, proximos">
+
 
     
     <!--  
