--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -2,7 +2,7 @@
     <div class="container_12">
         <div class="row">
             <div class="grid_7 busca">
-                <h2>Encontre pets e veterinárias mais rápido e próximo a você!</h2>
+                <h2>Encontre petshops e veterinários mais rápido e próximo a você!</h2>
                 <form method="post" action="/busca/endereco" class="row gutters">
                     <div class="col grid_6">
                         <input type="text" name="cep" maxlength="8" placeholder="Digite seu CEP" />
