Corrigindo busca utilizando GeoCoder do Google

--- a/views/busca/index.ejs
+++ b/views/busca/index.ejs
@@ -2,7 +2,7 @@
     <div class="container_12">
         <div class="row result">
             <div class=" grid_12">
-                <div data-action="<%= acao %>" data-type="<%= tipo %>" data-lat="<%= lat %>" data-lng="<%= lng %>" id="resultados" class="row"></div>
+                <div data-action="<%= acao %>" data-type="<%= tipo %>" data-endereco="<%= endereco %>" id="resultados" class="row"></div>
             </div>
             <a href="#" class="pagination animated">Mais resultados</a>
         </div>
