--- a/views/busca/endereco.ejs
+++ b/views/busca/endereco.ejs
@@ -23,9 +23,9 @@
                         <div class="col grid_5">
                             <select name="tipo" title="Serviço">
                                 <optgroup>
+                                    <option selected value="petvet">Todos</option>
                                     <option value="pet">Petshops</option>
-                                    <option value="vet">Veterinárias</option>
-                                    <option value="petvet">Todos</option>
+                                    <option value="vet">Veterinárias</option>                                    
                                 </optgroup>
                             </select>
                         </div>
@@ -35,7 +35,7 @@
                             <a href="/" class="bt">Voltar</a>
                         </div>
                         <div class="col grid_9">
-                            <button type="submit">Buscar Petshops</button>
+                            <button type="submit">Buscar</button>
                         </div>
                     </div>
                 </form>
