--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Shoppets - Encontre pets e veterinárias mais rápido e próximo a você!</title>
 
