Correção no detalhe da loja.

--- a/views/busca/detalhe.ejs
+++ b/views/busca/detalhe.ejs
@@ -3,7 +3,7 @@
         <div class="row result">
             <div class="row detalhe">
                 <div class="grid_12 pets">
-                    <div id="detalhes" data-id="<%= id %>" data-lat="<%= lat %>" data-lng="<%= lng %>" class="row gutters"></div>
+                    <div id="detalhes" data-id="<%= id %>" data-lat="<%= lat %>" data-lng="<%= lng %>" data-client-lat="<%= mylat %>" data-client-lng="<%= mylng %>" class="row gutters"></div>
                     <br />
                     <div class="map">
                         <h2>Como chegar</h2>
