Corrigindo retorno para a página de busca

--- a/views/busca/endereco.ejs
+++ b/views/busca/endereco.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="grid_7 busca">
                 <h2>Confirme seu endereço e escolha o serviço que procura!</h2>
-                <form method="post" action="/busca/index">
+                <form method="get" action="/busca/index">
                     <input type="hidden" name="bairro" value="<%= endereco.bairro %>" />
                     <div class="row gutters">
                         <div class="col grid_10">
