Corrigindo retorno para a página de busca

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,12 @@
     <meta name="description" content="Shoppets - Encontre petshops e veterinários mais rápido e próximo a você!">
     <meta name="keywords" content="petshops, petshop, pet shop, pet shops, veterinarios, busca, buscas, veterinario, veterinário, veterinários, compra, compras, pedido, pedidos, entrega, entregas, próximo, próximos, proximo, proximos">
 
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Shoppets"/>
+    <meta property="og:title" content="Encontre pets e veterinárias mais rápido e próximo a você!" />
+    <meta property="og:description" content="Encontre pets e veterinárias mais rápido e próximo a você!" />
+    <meta property="og:image" content="http://www.shoppets.com.br/images/logo.png" />
+
 
     
     <!--  
