Corrigindo retorno para a página de busca

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,9 @@
 
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:site_name" content="Shoppets"/>
-    <meta property="og:title" content="Encontre pets e veterinárias mais rápido e próximo a você!" />
+    <meta property="og:title" content="Shoppets" />
     <meta property="og:description" content="Encontre pets e veterinárias mais rápido e próximo a você!" />
+    <meta property="og:url" content="http://www.shoppets.com.br" />
     <meta property="og:image" content="http://www.shoppets.com.br/images/logo.png" />
 
 
