Corrigindo retorno para a página de busca

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Shoppets" />
     <meta property="og:description" content="Encontre pets e veterinárias mais rápido e próximo a você!" />
     <meta property="og:url" content="http://www.shoppets.com.br" />
-    <meta property="og:image" content="http://www.shoppets.com.br/images/logo_face.png" />
+    <meta property="og:image" content="http://www.shoppets.com.br/images/logo_face.png?<%= new Date().getTime() %>" />
 
 
     
