Corrigindo retorno para a página de busca

--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -5,7 +5,7 @@
                 <h2>Encontre petshops e veterinários mais rápido e próximo a você!</h2>
                 <form method="post" action="/busca/endereco" class="row gutters">
                     <div class="col grid_6">
-                        <input type="text" name="cep" maxlength="8" placeholder="Digite seu CEP" />
+                        <input type="text" id="busca-cep" name="cep" maxlength="9" placeholder="Digite seu CEP" />
                     </div>
                     <div class="col grid_6">
                         <button type="submit">Buscar</button>
