--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -134,6 +134,7 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/jquery-2.1.3.min.js"></script>
+    <script src="/js/jquery.mask.min.js"></script>
     <script src="/js/common.js"></script>
     <!--SCRIPTS END-->
   </body>
