Corrigindo retorno para a página de busca

--- a/views/busca/index.ejs
+++ b/views/busca/index.ejs
@@ -4,7 +4,7 @@
             <div class=" grid_12">
                 <div data-action="<%= acao %>" data-type="<%= tipo %>" data-endereco="<%= endereco %>" id="resultados" class="row"></div>
             </div>
-            <a href="#" class="pagination animated">Mais resultados</a>
+            <a href="#" class="pagination animated">Pesquisando...</a>
         </div>
     </div>
 </section>
