Incluindo opção de curtir páginacom Aplicativo Facebook.

--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -14,6 +14,9 @@
                 <div class="row gutters">
                     <p class="col grid_6">Não sabe seu CEP? <a href="/busca/endereco">Clique aqui</a></p> 
                     <p class="col grid_6"><img src="/images/gps.png" width="18" height="18" border="0" alt="" /> <a href="/busca"> Localize-me</a></p>
+                    <p class="col grid_12">
+                        <div class="fb-like" data-href="http://www.shoppets.com.br/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+                    </p>
                 </div>
             </div>
         </div>
